// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultiCommand 1`] = `
"# \`scripts\`

My scripts package

## Commands

  - **lint** - lint the project
  - **test** - test the project

## Options

| Flag | Type | Description |
| - | - | - |
| \`--verbose\`, \`-v\` | Boolean | Log a bunch of stuff |

## \`lint\`

lint the project

### Options

| Flag | Type | Description |
| - | - | - |
| \`--fix\` | Boolean | Run the application in fix mode |

### Examples

\`\`\`sh
lint --fix
\`\`\`

## \`test\`

test the project

### Options

| Flag | Type | Description |
| - | - | - |
| \`--interactive\` | Boolean | Run the application in interactive mode |

### Examples

\`\`\`sh
test --interactive
\`\`\`

"
`;

exports[`single command app basic 1`] = `
"# \`echo\`

Print a string to the terminal

## Options

| Flag | Type | Description |
| - | - | - |
| \`--value\` | String | The value to print |

"
`;

exports[`single command app with examples 1`] = `
"# \`echo\`

Print a string to the terminal

## Options

| Flag | Type | Description |
| - | - | - |
| \`--value\` | String | The value to print |

## Examples

\`\`\`sh
echo foo
\`\`\`

\`\`\`sh
echo \\"Intense message\\"
\`\`\`

"
`;
